<resources>
    <string name="app_name">Relief</string>

    <string name="exit_app_str">Press Again to Exit</string>

    <string name="rationale_init">APP Needs some Permission</string>
    <string name="permissions_denied_content_str">Permission Denied \nOpen Setting to Modify APP Permission</string>
    <string name="need_permissions_str">Permission Required</string>

    <string name="loading_tips">Loading...</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="check_in">Check In</string>
    <string name="profile">Profile</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="past_records">Past Records</string>
    <string name="check_in_sentence_1">You have checked in</string>
    <string name="check_in_sentence_2">regularly</string>
    <string name="check_in_sentence_3">today</string>

    <string name="not_check_in_sentence_1">You have</string>
    <string name="not_check_in_sentence_2">not</string>
    <string name="not_check_in_sentence_3">checked in</string>
    <string name="not_check_in_sentence_4">today.</string>
    <string name="not_check_in_sentence_5">Cheer up!</string>

    <string name="weekly_summary">Weekly Summary</string>
    <string name="monthly_summary">Monthly Summary</string>

    <string name="results">Results</string>
    <string name="details">Details</string>
    <string name="low">Low</string>
    <string name="high">High</string>

    <string name="phq">Patient Health Questionnaire (PHQ)</string>

    <string name="sentiment_analytics">Sentiment Analytics</string>
    <string name="emotion_analytics">Emotion Analytics</string>
    <string name="click_to_upload_your_post">Click to upload your post!</string>
    <string name="content">Content</string>
    <string name="suggestion">Suggestion</string>
    <string name="sentiment">Sentiment</string>
    <string name="target">Target</string>
    <string name="keyword">Keyword</string>
    <string name="emotion">Emotion</string>
    <string name="smile">Smile</string>

    <string name="multiple_monitor_indicators">Multiple Monitor Indicators</string>
    <string name="sleep_quality_score">Sleep Quality Score</string>
    <string name="heart_rate_score">Heart Rate Score</string>
    <string name="stress_type">Stress Type</string>
    <string name="stress_level">Stress Level</string>

    <string name="student_id">Student ID</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="academic_year">Academic Year</string>
    <string name="department">Computing</string>
    <string name="course">Course</string>

    <string name="emergency_contact">Emergency Contact</string>
    <string name="chat_with_us">Chat with Us</string>

    <string name="action_submit">Submit</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send">Send</string>
    <string name="copy_success">Copy Success</string>
</resources>