<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.relief.ui.viewmodel.HomeViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fl_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textSize="@dimen/sp_24"
                android:gravity="center_vertical"
                android:textStyle="bold"/>

            <com.example.relief.ui.widget.RoundImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:src="@drawable/avatar"
                app:border_color="@color/white"
                app:border_width="@dimen/dp_2" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_check_in_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_check_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_20"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_sentence_1"
                        android:textSize="@dimen/sp_20"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginStart="@dimen/dp_20"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_sentence_2"
                        android:textSize="@dimen/sp_22"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_sentence_3"
                        android:layout_marginStart="@dimen/dp_5"
                        android:textSize="@dimen/sp_20" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_not_check_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_20"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_check_in_sentence_1"
                        android:textSize="@dimen/sp_20"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_check_in_sentence_2"
                        android:textSize="@dimen/sp_22"
                        android:layout_marginStart="@dimen/dp_5"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_check_in_sentence_3"
                        android:layout_marginStart="@dimen/dp_5"
                        android:textSize="@dimen/sp_20"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginStart="@dimen/dp_20"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_check_in_sentence_4"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_check_in_sentence_5"
                        android:textSize="@dimen/sp_22"
                        android:layout_marginStart="@dimen/dp_5"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:layout_marginTop="@dimen/dp_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/past_records"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="@dimen/dp_40"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_5"
                android:src="@drawable/ic_left"/>

            <TextView
                android:id="@+id/tv_current_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="@dimen/dp_40"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_5"
                android:src="@drawable/ic_right"
                android:visibility="invisible"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/dp_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly_summary"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_weekly_harts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/dp_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly_summary"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_monthly_charts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>