<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.relief.ui.viewmodel.DetailViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fl_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:src="@drawable/ic_left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textSize="@dimen/sp_24"
                android:gravity="center_vertical"
                android:textStyle="bold"/>

            <com.example.relief.ui.widget.RoundImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:src="@drawable/avatar"
                app:border_color="@color/white"
                app:border_width="@dimen/dp_2" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_22"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center_horizontal"/>

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:layout_marginTop="@dimen/dp_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/dp_20"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_charts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"/>

    </LinearLayout>

</layout>