<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.relief.ui.viewmodel.MonitorViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fl_monitor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll_question_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_above="@id/btn_submit"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_30">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_180"
                android:background="@drawable/bg_monitor"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/multiple_monitor_indicators"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/black"
                            android:text="@string/sleep_quality_score"
                            android:textSize="@dimen/sp_18"/>

                        <EditText
                            android:id="@+id/et_sleep_quality_score"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_20"
                            android:textColor="@color/black"
                            android:inputType="numberPassword"
                            android:maxLength="2"
                            android:theme="@style/ThemeSleepQualityScore"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/dp_20"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/black"
                            android:text="@string/heart_rate_score"
                            android:textSize="@dimen/sp_18"/>

                        <EditText
                            android:id="@+id/et_heart_rate_score"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_20"
                            android:textColor="@color/black"
                            android:inputType="numberPassword"
                            android:maxLength="2"
                            android:theme="@style/ThemeHeartRateScore"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/dp_20"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/black"
                            android:text="@string/stress_type"
                            android:textSize="@dimen/sp_18"/>

                        <Spinner
                            android:id="@+id/s_stress_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_20"
                            android:entries="@array/stressType"
                            android:gravity="center"
                            android:spinnerMode="dropdown"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/dp_20"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="@color/black"
                            android:text="@string/stress_level"
                            android:textSize="@dimen/sp_18"/>

                        <Spinner
                            android:id="@+id/s_stress_level"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dp_10"
                            android:layout_marginEnd="@dimen/dp_20"
                            android:entries="@array/stressLevel"
                            android:gravity="center"
                            android:spinnerMode="dropdown"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_32"
            android:src="@drawable/ic_left"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_24"
            android:background="@drawable/bg_btn_unable_round"
            android:stateListAnimator="@null"
            android:text="@string/action_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

    </RelativeLayout>

</layout>